Tambah seeder, route menampilkan data terhapus dan semua pada route /sales dan /customer
FEAT : Menambahkan seeder untuk sales, dengan cara menjalankan

go run main.go seed sales

FEAT : menambahkan seeder untuk customer, dengan cara menjalankannya

go run main.go seed customer

FEAT : menambahkan route GET /customer/deleted untuk menampilkan data-data customer yang terhapus

FEAT : menambahkan route GET /customer/all untuk menampilkan semua data-data customer termasuk yang terhapus

FEAT : menambahkan route GET /sales/deleted untuk menampilkan data-data sales yang terhapus

FEAT : menambahkan route GET /sales/all untuk menampilkan semua data-data sales termasuk yang telah terhapus
